<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="4"
            android:id="@+id/vendor_p_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/primary" />

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vendor_p_name"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

            <TextView
                android:id="@+id/vendor_p_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/contact_person" />

            <TextView
                android:id="@+id/vendor_p_email"
                android:layout_width="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:weightSum="6"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="4"
            android:id="@+id/vendor_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/secondary" />

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vendor_name"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

            <TextView
                android:id="@+id/vendor_mobile"
                android:layout_width="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

            <TextView
                android:id="@+id/vendor_email"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>